--- a/.github/workflows/check-bioc.yml
+++ b/.github/workflows/check-bioc.yml
@@ -299,7 +299,7 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: kevinrue/mybioconductorpackage
+          repository: kevinrue/iseedeseq2
           tag_with_ref: true
           tag_with_sha: true
           tags: latest
